--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,7 @@
-
 {
   "name": "リアルタイム検索ビルダー",
   "short_name": "検索ビルダー",
-  "start_url": ".",
+  "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f3e5f5",
   "theme_color": "#f3e5f5",
@@ -10,6 +9,11 @@
     {
       "src": "icon192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon192.png", 
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
